--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -164,7 +164,7 @@
     z-index: 1000;
     background-color: rgba(0, 0, 0, .5);
     @media screen and (max-width: 992px) {
-      z-index: 11000;
+      z-index: 18000;
     }
     .close-adding {
       position: absolute;
